{
  "sourceLanguage" : "en",
  "strings" : {
    "" : {

    },
    "%@ entry added" : {

    },
    "%@ shares" : {

    },
    "%@, %@ shares" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$@, %2$@ shares"
          }
        }
      }
    },
    "%lld holdings" : {

    },
    "Add entry" : {

    },
    "Add Transaction" : {

    },
    "All-Time Profit" : {

    },
    "Allocation" : {

    },
    "Amount" : {

    },
    "Amount should be numeric" : {

    },
    "Asset" : {

    },
    "Audit" : {

    },
    "Average Buy Price" : {

    },
    "Buy" : {

    },
    "Buy Transaction" : {

    },
    "Cancel" : {

    },
    "Cost" : {

    },
    "Created" : {

    },
    "Current Value" : {

    },
    "Current vs Average Cost" : {

    },
    "Dashboard period" : {

    },
    "Dashboard tab" : {

    },
    "Dashboard unavailable" : {

    },
    "Dashboards" : {

    },
    "Date" : {

    },
    "Edit" : {

    },
    "Edit Transaction" : {

    },
    "Exchange" : {

    },
    "Exchange Code" : {

    },
    "Failed to add transaction" : {

    },
    "Failed to export transactions" : {

    },
    "Failed to import transactions" : {

    },
    "Failed to load portfolio entries" : {

    },
    "Failed to update transaction" : {

    },
    "Fetching your portfolio…" : {

    },
    "Fix" : {

    },
    "Hide money values" : {

    },
    "Holdings" : {

    },
    "Holdings Distribution" : {

    },
    "Holdings Net Worth" : {

    },
    "Industry" : {

    },
    "Invalid information provided" : {

    },
    "Invalid purchase price" : {

    },
    "ISIN" : {

    },
    "Loading dashboards" : {

    },
    "Loading net worth" : {

    },
    "Market Value" : {

    },
    "My Portfolio" : {

    },
    "Name" : {

    },
    "Net Worth" : {

    },
    "Net worth unavailable" : {

    },
    "No dashboard data yet" : {

    },
    "No growth points" : {

    },
    "No holdings" : {

    },
    "No portfolio entries yet" : {

    },
    "No related transactions" : {

    },
    "Please select a stock" : {

    },
    "Portfolio" : {

    },
    "Portfolio Growth Over Time" : {

    },
    "Portfolio growth will appear after transactions are available." : {

    },
    "Price before split" : {

    },
    "Progress" : {

    },
    "Purchase" : {

    },
    "Purchase price" : {

    },
    "Purchase Price" : {

    },
    "Ratio" : {

    },
    "Related Transactions" : {

    },
    "Save Changes" : {

    },
    "Sector" : {

    },
    "Selected date" : {

    },
    "Selected value" : {

    },
    "Sell" : {

    },
    "Sell Transaction" : {

    },
    "Shares" : {

    },
    "Show money values" : {

    },
    "Split" : {

    },
    "Split Transaction" : {

    },
    "Stock" : {

    },
    "Summary" : {

    },
    "Symbol" : {

    },
    "Symbol or ISIN" : {

    },
    "The CSV file is missing required transaction columns." : {

    },
    "Transaction" : {

    },
    "Transaction Details" : {

    },
    "Transaction Type" : {

    },
    "Transactions" : {

    },
    "Try again later." : {

    },
    "Type" : {

    },
    "Unavailable" : {

    },
    "Unit %@" : {

    },
    "Unit Value" : {

    },
    "Unrealized Profit/Loss" : {

    },
    "Updated" : {

    },
    "Updating dashboards" : {

    },
    "Updating dashboards..." : {

    },
    "Updating latest prices" : {

    },
    "Updating latest prices…" : {

    },
    "Use the add button to record your first stock transaction." : {

    },
    "Value" : {

    }
  },
  "version" : "1.1"
}