...
    func search(query _: String) async -> Result<KowalskiStocksSearchResponse, KowalskiStocksSearchErrors> {
        let quotes = [
            KowalskiClientStockItem(
                symbol: "AAPL",
                exchange: "NMS",
                name: "Apple Inc.",
                isin: "US0378331005",
                sector: "Technology",
                industry: "Consumer Electronics",
                exchangeDispatch: "NASDAQ",
            ),
        ]
        let response = KowalskiStocksSearchResponse(quotes: quotes)
...
